# stockmate

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  vite.config.js
.github/: dependabot.yml
.github/workflows/: codeql-js.yml  codeql-monthly.yml  codeql-rust.yml
scripts/: check.js  clean.js  prepare.js  reset.js
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: core.json  plugins.json
src-tauri/migrations/: 1_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/app/colors/: linux_de.rs  mod.rs  system.rs
src-tauri/src/app/database/: migrations.rs  mod.rs  pool.rs
src-tauri/src/app/paths/: mod.rs  path_handler.rs
src-tauri/src/core/colors/: linux_colors.rs  mod.rs  system_color.rs
src/lib/components/: Navbar.svelte  Titlebar.svelte
src/lib/utils/: path-handler.ts  system-color.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/info/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/upload/: +page.svelte
