[package]
name = "stockmate"
version = "0.0.0"
description = "Upload photos to stock services and social media"
authors = ["sm0qs"]
license = "GPL-3.0-or-later"
repository = "https://github.com/sm0qs/stockmate/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stockmate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "~2.9", features = [] }

# Plugins
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-prevent-default = "4"
tauri-plugin-single-instance = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

# Other
log = "0"
sqlx = "0"

# Windows only dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0", features = ["UI_ViewManagement_Core"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
